@@ -1,8 +1,12 @@
+Sun Mar 6 21:48:34: 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* source/module/sul.s: Fix unpredictable MUL instruction.
+
 Sat Mar 5 15:45:00  2005  John Tytgat  <John.Tytgat@aaug.net>
 
 	* source/common/unixify.c (__unixify): __RISCOSIFY_FILETYPE_EXT
 	  support got broken.
- 
+
 Fri Mar 4 21:55:54  2005  Alex Waugh  <alex@alexwaugh.com>
 
 	* source/clib/unistd.h, source/clib/unixlib/{asm_dec.s,
